--- a/html-css/module-03/css/styles.css
+++ b/html-css/module-03/css/styles.css
@@ -11,16 +11,8 @@ body {
     background-size: cover;
     background-position: center;
     padding: 200px 0;
-    font-family: 'Pathway Gothic One';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Pathway Gothic One Regular'), local('PathwayGothicOne-Regular'), url(https://fonts.gstatic.com/s/pathwaygothicone/v6/Lqv9ztoTUV8Q0FmQZzPqaBRcxZ7No-r1mAtcnpNU5cQ.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-    font-family: 'Pathway Gothic One';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Pathway Gothic One Regular'), local('PathwayGothicOne-Regular'), url(https://fonts.gstatic.com/s/pathwaygothicone/v6/Lqv9ztoTUV8Q0FmQZzPqaL4J1CEROx9mnpUAGKYKzuk.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
 }
 
 .wrapper {
@@ -39,7 +31,8 @@ body {
 
 .title {
     margin-bottom: 32px;
-    color: #0d4452;
+    font-family: 'Pathway Gothic One';
+    color: #263555;
 }
 
 .img {
@@ -50,7 +43,8 @@ body {
 
 .p {
     margin-bottom: 22px;
-    color: #0d4452;
+    font-size: 14px;
+    color: #263555;
 }
 
 
@@ -62,12 +56,14 @@ body {
 
 .title1 {
     margin-bottom: 28px;
-    color: #0d4452;
+    font-family: 'Pathway Gothic One';
+    color: #263555;
 }
 
 .title11 {
     margin-bottom: 15px;
-    color: #0d4452;
+    font-size: 14px;
+    color: #263555;
 }
 
 .p1 {
@@ -90,12 +86,14 @@ body {
 
 .title2 {
     margin-bottom: 25px;
-    color: #0d4452;
+    font-family: 'Pathway Gothic One';
+    color: #263555;
 }
 
 .p2 {
     margin-bottom: 20px;
-    color: #0d4452;  
+    font-size: 14px;
+    color: #263555;  
 }
 
 
@@ -117,8 +115,9 @@ body {
 
 .offer-list ul li {
     margin-bottom: 18px;
-    font-size: 19px;
-    color: #0d4452;
+    font-size: 14px;
+    font-weight: bold;
+    color: #263555;
 }
 
 
