--- a/html-css/module-04/css/styles.css
+++ b/html-css/module-04/css/styles.css
@@ -47,6 +47,9 @@ body {
 }
 
 .img {
+    display: inline-block;
+    width: 360px;
+    height: 281px;
     margin-right: 19px;
     vertical-align: top;
 }
